--- a/style.css
+++ b/style.css
@@ -1,34 +1,60 @@
+/* Reset e base */
 body {
   margin: 0;
-  background: #0a0a0a;
-  color: #e1e1e1;
-  font-family: 'UnifrakturCook', serif;
 }
 
+/* Cabeçalho */
 header {
   text-align: center;
-  padding: 60px 20px;
-  background: linear-gradient(to bottom, #0a0a0a25, #0000000c);
+  padding: 0px 1060px;
+  background: linear-gradient(to bottom, #2727272c, #1d1d1d1c);
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 4.0rem;
   color: #ffffff;
+  font-family: "Helvetica", serif;
+  margin-top: 0px;
+  margin-bottom: -25px;
+}
+h2 {
+  font-size: 2.5rem;
+  color: #ffffff;
+  font-family: "Helvetica", serif;
+  margin-top: 50px;
+}
+h3 {
+  font-size: 1.0rem;
+  color: #ffffff;
+  font-family: "Helvetica", serif;
+  margin-bottom: -30px;
+  text-align: center; /* Alinha ao centro */
 }
 
+p {
+  text-align: center;
+  font-size: 1.4rem;
+  color: #ffffff;
+  margin-top: 150px;
+  margin-bottom: 40px;
+  font-family: "Helvetica", serif;
+}
+
+/* Conteúdo principal */
 .content {
-  padding: 40px 20px;
+  padding: 150px 10px;
 }
 
+/* Grid de imagens */
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  gap: 5px;
 }
 
 .grid img {
-  width: 50%;
-  border: 0px solid #000000;
+  width: 100%;
+  border: 0;
   border-radius: 5px;
   transition: transform 0.3s ease;
 }
@@ -37,166 +63,158 @@ h1 {
   transform: scale(1.05);
 }
 
+/* Rodapé */
 footer {
   text-align: center;
-  padding: 30px;
+  padding: 70px;
   color: #ffffff;
   font-size: 1rem;
 }
 
-@keyframes move {
-    100% {
-        transform: translate3d(0, 0, 1px) rotate(360deg);
-    }
+/* =========================
+   Animação de fundo animado
+   ========================= */
+
+/* 
+  Define variáveis CSS para controlar o tamanho e as cores do fundo animado.
+  Usa gradientes cônicos para criar um efeito visual dinâmico.
+  A animação é aplicada ao elemento html.
+*/
+html {
+  --s: 100px; /* Tamanho do padrão do fundo */
+  --c1: #111111; /* Cor 1 com transparência */
+  --c2: #000000;   /* Cor 2 sólida */
+
+  --_s: calc(2*var(--s)) calc(2*var(--s));
+  --_g: var(--_s) conic-gradient(at 40% 40%, #0000 75%, var(--c1) 0);
+  --_p: var(--_s) conic-gradient(at 20% 20%, #0000 75%, var(--c2) 0);
+
+  background:
+    calc(.9*var(--s)) calc(.9*var(--s)) / var(--_p),
+    calc(-.1*var(--s)) calc(-.1*var(--s)) / var(--_p),
+    calc(.7*var(--s)) calc(.7*var(--s)) / var(--_g),
+    calc(-.3*var(--s)) calc(-.3*var(--s)) / var(--_g),
+    conic-gradient(from 90deg at 20% 20%, var(--c2) 25%, var(--c1) 0) 0 0 / var(--s) var(--s);
+  animation: m 3s infinite;
 }
 
-.background {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: #000000;
-    overflow: hidden;
-    z-index: -1;
+/* 
+  Animação 'm' que altera as posições dos backgrounds para criar o efeito de movimento.
+*/
+@keyframes m {
+  0% {
+    background-position: 
+      calc(.9*var(--s)) calc(.9*var(--s)),
+      calc(-.1*var(--s)) calc(-.1*var(--s)),
+      calc(.7*var(--s)) calc(.7*var(--s)),
+      calc(-.3*var(--s)) calc(-.3*var(--s)), 0 0;
+  }
+  25% {
+    background-position: 
+      calc(1.9*var(--s)) calc(.9*var(--s)),
+      calc(-1.1*var(--s)) calc(-.1*var(--s)),
+      calc(1.7*var(--s)) calc(.7*var(--s)),
+      calc(-1.3*var(--s)) calc(-.3*var(--s)), 0 0;
+  }
+  50% {
+    background-position: 
+      calc(1.9*var(--s)) calc(-.1*var(--s)),
+      calc(-1.1*var(--s)) calc(.9*var(--s)),
+      calc(1.7*var(--s)) calc(-.3*var(--s)),
+      calc(-1.3*var(--s)) calc(.7*var(--s)), 0 0;
+  }
+  75% {
+    background-position: 
+      calc(2.9*var(--s)) calc(-.1*var(--s)),
+      calc(-2.1*var(--s)) calc(.9*var(--s)),
+      calc(2.7*var(--s)) calc(-.3*var(--s)),
+      calc(-2.3*var(--s)) calc(.7*var(--s)), 0 0;
+  }
+  100% {
+    background-position: 
+      calc(2.9*var(--s)) calc(-1.1*var(--s)),
+      calc(-2.1*var(--s)) calc(1.9*var(--s)),
+      calc(2.7*var(--s)) calc(-1.3*var(--s)),
+      calc(-2.3*var(--s)) calc(1.7*var(--s)), 0 0;
+  }
 }
 
-.background span {
-    width: 1vmin;
-    height: 1vmin;
-    border-radius: 1vmin;
-    backface-visibility: hidden;
-    position: absolute;
-    animation: move;
-    animation-duration: 50;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+/* <weight>: Use a value from 100 to 900
+   <uniquifier>: Use a unique and descriptive class name
+*/
+
+.grenze-gotisch-italic {
+  font-family: "Grenze Gotisch", serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: italic;
 }
 
+/* Versão Desktop (padrão) */
+/* Já está definida pelo seu CSS atual */
 
-.background span:nth-child(0) {
-    color: #ffffff;
-    top: 24%;
-    left: 10%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -1vw 8vh;
-    box-shadow: 2vmin 0 1.0296095704862278vmin currentColor;
+/* Tablet (até 1024px) */
+@media (max-width: 1024px) {
+  header {
+    padding: 40px 0;
+  }
+  .content {
+    padding: 20px 10px;
+  }
+  .grid {
+    gap: 15px;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.1rem;
+    margin-top: 80px;
+  }
 }
-.background span:nth-child(1) {
-    color: #ffffff;
-    top: 62%;
-    left: 80%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -3vw 16vh;
-    box-shadow: -2vmin 0 0.3272930021270436vmin currentColor;
-}
-.background span:nth-child(2) {
-    color: #ffffff;
-    top: 69%;
-    left: 79%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -12vw 3vh;
-    box-shadow: 2vmin 0 0.7496552235556331vmin currentColor;
-}
-.background span:nth-child(3) {
-    color: #ffffff;
-    top: 7%;
-    left: 74%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -10vw -17vh;
-    box-shadow: 2vmin 0 1.146603288760542vmin currentColor;
-}
-.background span:nth-child(4) {
-    color: #ffffff;
-    top: 96%;
-    left: 95%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 16vw 10vh;
-    box-shadow: -2vmin 0 0.44630030662078135vmin currentColor;
-}
-.background span:nth-child(5) {
-    color: #ffffff;
-    top: 12%;
-    left: 54%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -20vw -4vh;
-    box-shadow: 2vmin 0 0.8135751347302764vmin currentColor;
-}
-.background span:nth-child(6) {
-    color: #ffffff;
-    top: 99%;
-    left: 54%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 18vw -6vh;
-    box-shadow: -2vmin 0 1.1164168534518861vmin currentColor;
-}
-.background span:nth-child(7) {
-    color: #ffffff;
-    top: 72%;
-    left: 72%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 4vw -23vh;
-    box-shadow: 2vmin 0 0.8150736115564743vmin currentColor;
-}
-.background span:nth-child(8) {
-    color: #ffffff;
-    top: 8%;
-    left: 3%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -18vw -1vh;
-    box-shadow: -2vmin 0 0.9986923810370171vmin currentColor;
-}
-.background span:nth-child(9) {
-    color: #ffffff;
-    top: 62%;
-    left: 91%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -9vw 1vh;
-    box-shadow: -2vmin 0 0.5486832269138072vmin currentColor;
-}
-.background span:nth-child(10) {
-    color: #ffffff;
-    top: 93%;
-    left: 40%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 19vw 11vh;
-    box-shadow: 2vmin 0 1.0420833386143078vmin currentColor;
-}
-.background span:nth-child(11) {
-    color: #ffffff;
-    top: 61%;
-    left: 35%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 5vw -10vh;
-    box-shadow: 2vmin 0 0.7815418638494025vmin currentColor;
-}
-.background span:nth-child(12) {
-    color: #ffffff;
-    top: 15%;
-    left: 31%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: 15vw 18vh;
-    box-shadow: -2vmin 0 1.1326484671747412vmin currentColor;
-}
-.background span:nth-child(13) {
-    color: #ffffff;
-    top: 90%;
-    left: 12%;
-    animation-duration: 6s;
-    animation-delay: -1s;
-    transform-origin: -24vw -11vh;
-    box-shadow: -2vmin 0 0.4465827295359738vmin currentColor;
+
+/* Mobile (até 600px) */
+@media (max-width: 600px) {
+  header {
+    padding: 5px 0;
+  }
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: -5px;
+  }
+  h2 {
+    font-size: 1rem;
+    margin-top: 10px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 0.5rem;
+    margin-bottom: 30px;
+    text-align: center; /* Alinha ao centro no mobile */
+  }
+  .content {
+    padding: -600px 2px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    gap: 5px;
+  }
+  .grid img {
+    width: 100%;
+  }
+  p {
+    font-size: 0.85rem;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  footer {
+    padding: 15px 2px;
+    font-size: 0.7rem;
+    text-align: center;
+  }
 }
