--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 header {
   text-align: center;
   padding: 0px 1060px;
-  background: linear-gradient(to bottom, #2727272c, #1d1d1d1c);
+  background: linear-gradient(to bottom, #000000, #1d1d1d1f);
 }
 
 /* Fontes */
